[tool.poetry]
name = "crypto-historic"
version = "0.1.0"
description = ""
authors = ["Manuel Ponsa <manuponsa@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_historic"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptocmd = "^0.6.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
download = "crypto_historic.download:start"